# gtfsdb-seg

./: CHANGELOG.md  README.md  pyproject.toml
gtfsdb_seg/: loader.py
gtfsdb_seg/control/: printer.py
gtfsdb_seg/model/: database.py  segment_routes.py  segment_stops.py  segment_trips.py  stop_segment.py  stop_segment_trip.py
